k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerservice
  labels:
    app: customerservice
spec:
  selector:
    matchLabels:
      app: customerservice
  replicas: 1
  template:
    metadata:
      labels:
        app: customerservice
    spec:
      containers:
      - name: customerservice
        image: docker.pkg.github.com/init-initapp/customerservice:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
